--- a/app/main.html
+++ b/app/main.html
@@ -41,7 +41,8 @@
                 </div>
             </div>
         </div>
-
+        <div name="uranai">
+        </div>
         <div name="weather_week">
             <h2>今週の天気</h2>
             <table style="background-color:floralwhite; box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .5);">
