--- a/app/main.html
+++ b/app/main.html
@@ -42,6 +42,7 @@
             </div>
         </div>
         <div name="uranai">
+            <p>uranai</p>
         </div>
         <div name="weather_week">
             <h2>今週の天気</h2>
