--- a/app/main.html
+++ b/app/main.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div name="uranai">
-            <p>uranai1</p>
+            <p>uranai0000000000000000000</p>
         </div>
         <div name="weather_week">
             <h2>今週の天気</h2>
